# procon

./: .gitignore  Dockerfile  README.md  fabfile.py  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
language/: cpp.yml  javascript.yml  pypy.yml  python.yml  rust.yml  typescript.yml
language/rust/: Cargo.toml  hooks.py
lib/python/: calc.py
lib/rust/: 2d.rs  int.rs  multibtreeset.rs  option_ext.rs  polyomino.rs
work/atcoder/acl-practice/j/: cases.txt  solve.rs
work/atcoder/edpc/a/: solve.rs
work/atcoder/edpc/b/: cases.txt  solve.rs
work/atcoder/edpc/c/: solve.rs
work/atcoder/edpc/d/: cases.txt  solve.rs
work/atcoder/edpc/e/: cases.txt  solve.rs
work/atcoder/edpc/g/: cases.txt  solve.rs
work/atcoder/tdpc/a/: solve.rs
work/atcoder/tessoku-book/a13/: cases.txt  randomtest.py  solve.rs
work/atcoder/tessoku-book/a23/: cases.txt  solve.rs
work/atcoder/tessoku-book/a24/: cases.txt  randomtest.py  solve.rs
work/atcoder/tessoku-book/a38/: cases.txt  solve.rs
work/atcoder/tessoku-book/a64/: cases.txt  solve.rs
work/atcoder/tessoku-book/a65/: cases.txt  solve.rs
work/atcoder/tessoku-book/b13/: cases.txt  randomtest.py  solve.rs
work/atcoder/tessoku-book/b23/: cases.txt  solve.rs
work/atcoder/tessoku-book/b24/: cases.txt  solve.rs
work/atcoder/tessoku-book/b38/: cases.txt  solve.rs
work/atcoder/tessoku-book/b64/: cases.txt  solve.rs
work/atcoder/tessoku-book/b65/: cases.txt  solve.rs
work/atcoder/typical90/001/: cases.txt  solve.rs
work/atcoder/typical90/002/: cases.txt  solve.rs
work/atcoder/typical90/003/: cases.txt  (+1 more)
(+1049 files in other folders)
