[package]
name = "solver"
edition = "2021"

[[bin]]
name="solve"
path="solve.rs"

[dependencies]
ac-library-rs = "=0.1.1"
memoise = "=0.3.2"
num = "=0.4.1"
petgraph = "=0.6.3"
regex = "=1.9.1"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
proconio = { version = "=0.4.5", features = ["derive"] }
